<resources>
    <string name="app_name">Attendance</string>
    <string name="welcome">Welcome to Simple Attendance App</string>
    <string name="go_to_login_page">Go To Login Page</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="view_student_details">View Student Details</string>
    <string name="logout">Logout</string>
    <string name="view_faculty_details">View Faculty Details</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="add_student">Add Student</string>
    <string name="view_student_attendance">View Student Attendance</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="select_date">Select Date</string>
    <string name="add_attendance">Add Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="view_total_attendance">View Total Attendance</string>
    <string name="todo">TODO</string>
    <string name="play_tic_tac_toe">Play Tic Tac Toe</string>
    <string name="player_1">Player 1 :</string>
    <string name="player_2">Player 2 :</string>
    <string name="exit">Exit</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="register_student">Register Student</string>
    <string name="first_name">First Name</string>
    <string name="student_id">Student ID</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="select_department">Select Department</string>
    <string name="select_section">Select Section</string>
    <string name="register">Register</string>
    <string name="view_students">View Students</string>
    <string name="update">Update</string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="register_faculty">Register Faculty</string>
    <string name="change_username_and_password">Change Username and Password</string>
    <string name="view_attendance_by_percentage">View Attendance By Percentage</string>
    <string name="faculty_username">Faculty Username</string>
    <string name="faculty_password">Faculty Password</string>
    <string name="change_password">Change Password</string>
    <string name="view_log">View Log</string>
    <string name="view_selected_log">View Selected Log</string>
    <string name="get_all_students">Get All Students</string>
    <string name="view_classes_dates">View Classes Dates</string>
    <string name="add_update_attendance">Add / Update Attendance</string>
    <string name="select_student">Select Student</string>
    <string name="select_status">Select Status</string>
    <string name="view_condonation_detained_list">View Condonation / Detained LIst</string>
    <string name="clear_data">Clear Data</string>
    <string name="select_id_and_status">Select ID and Status</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="select_department_and_section">Select Department and Section</string>
    <string name="credits">Credits</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="update_student">Update Student</string>
    <string name="search_log">Search Log</string>
</resources>
