<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateFacultyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:drawableTop="@mipmap/id"
        android:text="@string/update_faculty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/facultyId"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="50sp"
        android:background="#11000000"
        android:drawableStart="@drawable/user"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/facultyFirstname"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:layout_gravity="center"
        android:background="#11000000"
        android:hint="@string/first_name"
        android:drawableStart="@drawable/user_name"
        android:inputType="textCapWords"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/facultyLastname"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:layout_gravity="center"
        android:background="#11000000"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:drawableStart="@drawable/user_name"
        android:maxLines="1" />

    <EditText
        android:id="@+id/facultyTelNo"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:layout_gravity="center"
        android:background="#11000000"
        android:hint="@string/contact_number"
        android:drawableStart="@drawable/mobile"
        android:inputType="phone"
        android:maxLines="1"/>


    <EditText
        android:id="@+id/facultyUsername"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:ems="10"
        android:background="#11000000"
        android:hint="@string/username"
        android:drawableStart="@drawable/user"
        android:maxLines="1"/>

        <android.support.v7.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10sp"
            android:background="@android:color/white"
            android:layout_marginTop="50sp">

    <Button
        android:id="@+id/updateFaculty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/update"
        android:drawableTop="@mipmap/update_user"
        android:background="@android:color/transparent" />

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>