<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddFacultyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:drawableTop="@mipmap/id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:textColor="#000"
            android:text="@string/register_faculty"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20sp">


        <EditText
            android:id="@+id/facultyFirstName"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginBottom="10sp"
            android:hint="@string/first_name"
            android:drawableStart="@drawable/user_name"
            android:inputType="textCapWords">

            <requestFocus/>

        </EditText>

        <EditText
            android:id="@+id/facultyLastName"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginBottom="10sp"
            android:hint="@string/last_name"
            android:drawableStart="@drawable/user_name"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/facultyTel"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:layout_marginBottom="10sp"
            android:drawableStart="@drawable/mobile"
            android:hint="@string/contact_number"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/facultyUserName"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/username"
            android:drawableStart="@drawable/user"
            android:inputType="text"/>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10sp"
                android:background="@android:color/white"
                android:layout_marginTop="50sp">

            <Button
                android:id="@+id/registerFaculty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableTop="@mipmap/add_user"
                android:text="@string/register_faculty" />

            </android.support.v7.widget.CardView>



        </LinearLayout>

    </LinearLayout>

</ScrollView>