<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:drawableTop="@mipmap/attendance_app"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textColor="#000"
        android:text="@string/app_name"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50sp">

        <Spinner
            android:id="@+id/login_as"
            android:layout_width="200sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:layout_marginBottom="40sp"
            android:layout_marginTop="50sp" />


        <EditText
            android:id="@+id/username"
            android:layout_width="200sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/username"
            android:layout_marginBottom="10sp"
            android:drawableStart="@drawable/user_name"
            android:maxLines="1">

            <requestFocus />

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="10sp"
            android:layout_width="200sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/password" />

        <android.support.v7.widget.CardView
            android:layout_width="300sp"
            android:layout_height="35sp"
            android:layout_gravity="center"
            app:cardCornerRadius="25sp"
            android:layout_marginTop="50sp"
            android:elevation="10sp">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:background="@android:color/transparent"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
