<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:drawableTop="@mipmap/id"
            android:text="@string/register_student"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/studentID"
                android:layout_width="300sp"
                android:layout_height="30sp"
                android:background="#11000000"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginBottom="10sp"
                android:drawableStart="@drawable/user"
                android:hint="@string/student_id"
                android:inputType="text"/>


            <EditText
                android:id="@+id/studentFirstName"
                android:layout_width="300sp"
                android:layout_height="30sp"
                android:background="#11000000"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginBottom="10sp"
                android:hint="@string/first_name"
                android:drawableStart="@drawable/user_name"
                android:inputType="textCapWords"/>


            <EditText
                android:id="@+id/studentLastName"
                android:layout_width="300sp"
                android:layout_height="30sp"
                android:background="#11000000"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginBottom="10sp"
                android:hint="@string/last_name"
                android:drawableStart="@drawable/user_name"
                android:inputType="textCapWords" />


            <EditText
                android:id="@+id/studentTel"
                android:layout_width="300sp"
                android:layout_height="30sp"
                android:background="#11000000"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:ems="10"
                android:layout_marginBottom="10sp"
                android:hint="@string/contact_number"
                android:drawableStart="@drawable/mobile"
                android:inputType="phone"/>

            <Spinner
                android:id="@+id/studentDepartment"
                android:layout_width="300sp"
                android:layout_height="30sp"
                android:background="#11000000"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"/>


            <Spinner
                android:id="@+id/studentSection"
                android:layout_width="300sp"
                android:layout_height="30sp"
                android:background="#11000000"
                android:layout_gravity="center" />

                <android.support.v7.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:background="@android:color/white"
                    android:layout_marginTop="50sp">

                <Button
                    android:id="@+id/registerStudent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/add_user"
                    android:text="@string/register_student"/>

                </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>