<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAttendanceSessionActivity"
    android:padding="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp">

        <Spinner
            android:id="@+id/department"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:background="#11000000"/>

        <Spinner
            android:id="@+id/section"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:background="#11000000"
            android:layout_marginTop="10sp"/>

        <EditText
            android:id="@+id/subject"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:ems="10"
            android:drawableStart="@drawable/book"
            android:hint="@string/enter_subject"
            android:inputType="textCapCharacters"
            android:layout_marginTop="10sp">

            <requestFocus/>

        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

        <EditText
            android:id="@+id/selectDay"
            android:layout_width="300sp"
            android:layout_height="30sp"
            android:background="#11000000"
            android:layout_centerInParent="true"
            android:ems="10"
            android:inputType="none"
            android:drawableStart="@drawable/date"/>


        <ImageButton
            android:layout_alignEnd="@+id/selectDay"
            android:id="@+id/dateImageButton"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="#11000000"
            android:cropToPadding="true"
            android:src="@mipmap/calender" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp">

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/addAttendance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/add_attendance"
                    android:text="@string/add_attendance" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/viewAttendance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/view_user"
                    android:text="@string/view_attendance"
                    android:layout_gravity="center"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp">

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10sp"
                android:background="@android:color/white">


                <Button
                    android:id="@+id/viewTotalAttendance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/list"
                    android:text="@string/view_total_attendance" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/viewAttendanceByPercentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/list"
                    android:text="@string/view_attendance_by_percentage"
                    android:layout_gravity="center"/>



            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp">

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/viewClassesDates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/calender"
                    android:text="@string/view_classes_dates" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/addOrUpdateAttendance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/update_attendance"
                    android:text="@string/add_update_attendance"
                    android:layout_gravity="center"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp">

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/changeFacultyPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/change_password"
                    android:text="@string/change_password"
                    android:layout_gravity="center"/>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/logoutFromAddAttendanceSessionActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:drawableTop="@mipmap/log_out"
                    android:text="@string/logout" />

            </android.support.v7.widget.CardView>

        </LinearLayout>






    </LinearLayout>


</ScrollView>