<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:drawableTop="@mipmap/attendance_app"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textColor="#000"
        android:text="@string/app_name"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100sp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:orientation="horizontal"
            android:layout_marginBottom="10sp">

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/loginPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/login_page"
                    android:text="@string/go_to_login_page"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:orientation="horizontal"
            android:layout_marginTop="20sp">

            <android.support.v7.widget.CardView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginEnd="10sp"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/playTicTacToe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/tictactoe"
                    android:background="@android:color/transparent"
                    android:text="@string/play_tic_tac_toe"
                    android:layout_gravity="center"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
